--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
    <link href="https://cdn.jsdelivr.net/npm/daisyui@3.6.2/dist/full.css" rel="stylesheet" type="text/css" />
    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
+<body class="bg-slate-300">
    <header>
       <h2 class="text-6xl">Hunting Phone</h2>
    </header>
-   <main>
+   <main class="container mx-auto mt-8">
+      <section class="p-4 bg-gray-400 m-4">
+         <input id="search-field" type="text" placeholder="search..." class="input w-full max-w-xs" />
+         <button id="search-btn" onclick="handleSearch()" class="btn btn-accent">Search</button>
+      </section>
       <section>
-         <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+         <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 p-4">
             <!-- <div class="card w-96 bg-base-100 shadow-xl">
                <figure><img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
                <div class="card-body">
