--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
          <button id="search-btn" onclick="handleSearch()" class="btn btn-accent">Search</button>
       </section>
       <section>
+         <div id="toggle-spinner" class="text-center my-40 hidden">
+            <span class="loading loading-spinner loading-lg"></span>
+         </div>
          <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 p-4">
             <!-- <div class="card w-96 bg-base-100 shadow-xl">
                <figure><img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
@@ -29,6 +32,10 @@
                  </div>
                </div>
              </div> -->
+         </div>
+         <!-- Show all button -->
+         <div id="show-all-btn" class="hidden">
+            <button class="btn btn-primary">Show All</button>
          </div>
       </section>
    </main>
