showing all elements are added by modifying show all button

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
          <button id="search-btn" onclick="handleSearch()" class="btn btn-accent">Search</button>
       </section>
       <section>
+         <!-- Spinner or Loader division -->
          <div id="toggle-spinner" class="text-center my-40 hidden">
             <span class="loading loading-spinner loading-lg"></span>
          </div>
@@ -34,7 +35,7 @@
              </div> -->
          </div>
          <!-- Show all button -->
-         <div id="show-all-btn" class="hidden">
+         <div id="show-all-btn" class="hidden text-center my-8" onclick="showAllButton()">
             <button class="btn btn-primary">Show All</button>
          </div>
       </section>
