--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
          <div id="toggle-spinner" class="text-center my-40 hidden">
             <span class="loading loading-spinner loading-lg"></span>
          </div>
+         <!-- No data available part -->
+         <div id="no-available" class="text-center my-40 hidden">
+            <span class="text-8xl">No Available</span>
+         </div>
          <div id="phone-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 p-4">
             <!-- <div class="card w-96 bg-base-100 shadow-xl">
                <figure><img src="/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
@@ -39,6 +43,20 @@
             <button class="btn btn-primary">Show All</button>
          </div>
       </section>
+      <!-- each phone details -->
+      <!-- Open the modal using ID.showModal() method -->
+      <dialog id="phoneDetails" class="modal modal-bottom sm:modal-middle">
+      <form method="dialog" class="modal-box">
+         <h3 id="d-phone-name" class="font-bold text-lg">Hello!</h3>
+         <div id="phone-detail-container">
+
+         </div>
+         <div class="modal-action">
+            <!-- if there is a button in form, it will close the modal -->
+            <button class="btn">Close</button>
+         </div>
+      </form>
+      </dialog>
    </main>
    <footer></footer>
 
